Fix dialog being visible below books on bookshelf

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ button {
 }
 
 dialog {
+  z-index: 2;
   transition: all 2s ease-in-out;
   background-color: rgba(255, 0, 0, 0);
   position: absolute;
